<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_caller"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/vertical_margin"
    android:paddingLeft="@dimen/horizontal_margin"
    android:paddingRight="@dimen/horizontal_margin"
    android:paddingTop="@dimen/vertical_margin"
    tools:context="com.celuk.caller.CallerReadyFragment">

    <TextView
        android:id="@+id/tv_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/general_margin"
        android:text="@string/sign_out"
        android:textColor="@color/c_black"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/general_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_ready_to_call_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active_receiver_label" />

        <TextView
            android:id="@+id/tv_receiver_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_ready_to_call_label"
            android:text="receiver@mail.com"
            android:textColor="@color/c_black"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_call_receiver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/call" />

</RelativeLayout>
