<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.celuk.main.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.CusAppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.CusToolBarOverlay">

            <!--<TextView-->
            <!--android:id="@+id/toolbar_title"-->
            <!--style="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:text="@string/app_name"-->
            <!--android:textColor="@color/c_white" />-->
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/vertical_margin"
        android:paddingLeft="@dimen/horizontal_margin"
        android:paddingRight="@dimen/horizontal_margin"
        android:paddingTop="@dimen/vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/tv_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/general_margin"
            android:text="-"
            android:textColor="@color/c_black" />

        <TextView
            android:id="@+id/tv_sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/general_margin"
            android:text="@string/sign_out"
            android:textColor="@color/c_black"
            android:textStyle="bold" />

        <View
            android:id="@+id/v_anchor_center"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="32dp" />

        <TextView
            android:id="@+id/tv_caller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/v_anchor_center"
            android:layout_centerHorizontal="true"
            android:text="@string/caller"
            android:textColor="@color/c_red"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/tv_receiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/v_anchor_center"
            android:layout_centerHorizontal="true"
            android:text="@string/receiver"
            android:textColor="@color/c_green"
            android:textSize="50sp" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
